# robot_status_handler

./: README.md
robot_status_handler/: CMakeLists.txt  package.xml
robot_status_msgs/: CMakeLists.txt  README.md  package.xml
robot_status_msgs/msg/: SensorStatus.msg  VelocityStatus.msg
sensor_status_publisher/: CMakeLists.txt  README.md  package.xml
sensor_status_publisher/include/sensor_status_publisher/: sensor_status_publisher.hxx  utils.hxx
sensor_status_publisher/launch/: publisher.launch.py
sensor_status_publisher/src/: main.cxx
sensor_status_publisher/src/sensor_status_publisher/: sensor_status_publisher.cxx
